--- a/package.yaml
+++ b/package.yaml
@@ -7,7 +7,7 @@ maintainer: Alexander Wood <alexljwood24@hotmail.co.uk>
 copyright: 2022 Alexander Wood
 license: MIT
 github: ElaraLang/elara
-tested-with: ghc ==9.4.2
+tested-with: ghc ==9.4.4
 language: GHC2021
 
 extra-source-files:
@@ -23,11 +23,11 @@ dependencies:
   - bytestring
   - utf8-string
   - array
-  - megaparsec
+  - megaparsec >= 9.0.0
   - headed-megaparsec
   - parser-combinators
   - pretty-simple
-  - diagnose
+  - diagnose >= 2.4.0
   - prettyprinter
   - prettyprinter-ansi-terminal
   - polysemy
