--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,5 @@
 packages:
   - .
-  
-# extra-deps:
-#   - git: git@github.com:ElaraLang/h2jvm.git
-#     commit: MASTER
 
 resolver:
   compiler: ghc-9.2-7
@@ -12,7 +8,12 @@ flags:
   diagnose:
     megaparsec-compat: true
 
+
+
+
 extra-deps:
+- git: git@github.com:ElaraLang/h2jvm.git
+  commit: cd5b956501f5577a84f57638446a12363859f48d
 - diagnose-2.4.0@sha256:c594a0b512a8d3aa58b240070467d6f337ef0769e367a0e74f2081307b1b13d7,5941 
 - async-2.2.4@sha256:2b9409023536823233ce3134558565d01b3382e651fa54ac8cb8a99967e023c9,3095
 - base-noprelude-4.13.0.0@sha256:3cccbfda38e1422ca5cc436d58858ba51ff9114d2ed87915a6569be11e4e5a90,6842
