--- a/stack.yaml
+++ b/stack.yaml
@@ -8,9 +8,6 @@ flags:
   diagnose:
     megaparsec-compat: true
 
-build:
-  library-profiling: true
-  executable-profiling: true
 
 extra-deps:
 - git: git@github.com:ElaraLang/h2jvm.git
@@ -59,3 +56,11 @@ extra-deps:
 - adjunctions-4.4.2@sha256:f77a007099851b948f6c98acc49753f4ec19ec234471acfce50386ec50402846,3379
 - atomic-primops-0.8.4@sha256:5218db0d8d4efe203a06c4643a0c6aeb3ab1abe159e92c122decc4f0dd1b5f38,2339
 - invariant-0.6.2@sha256:274957184eb1f4b3f243ccce153344b8204c500cd52d14bad68c2381647ea567,3518
+- hspec-2.11.4@sha256:424280c999a5815758c9cfbd2c4ff3df7650027b53ef4aacb40966f4c78443e0,1714
+- hspec-megaparsec-2.2.0@sha256:679b9b91ea0ed0c36d6782d6051a08e0825409d10adbab8c8cfa9c8bd8bfc245,1802
+- neat-interpolation-0.5.1.3@sha256:d7ec83ccacabb447f582f9742aefdc34a5121f6127c91d0b1ad84a1e14b6c91c,2996
+- hspec-core-2.11.4@sha256:1d996912bfb66b0b5ba236ab72d5f66a1573fe8d00becd3c8825c5d9692709c7,6765
+- hspec-discover-2.11.4@sha256:5014056bf2ba6d9f4fff4367660b380bff7551363d487982e6753ec5dc1c25d9,2169
+- hspec-expectations-0.8.4@sha256:4237f094a7931202ff57ac6475542b0b314b50a7024550e2b6eb87cfb0d4ff93,1702
+- haskell-lexer-1.1.1@sha256:4ce310678b7e56b51acb558c0233d2f71a3f3553f8a88e9b48c0bc68301f799b,1296
+- tf-random-0.5@sha256:14012837d0f0e18fdbbe3d56e67da8622ee5e20b180abce952dd50bd9f36b326,3983
