more unit tests for type inference

--- a/elara.cabal
+++ b/elara.cabal
@@ -254,6 +254,7 @@ test-suite elara-test
       Arbitrary.Names
       Common
       Infer
+      Infer.Common
       Lex
       Lex.Common
       Lex.Indents
