--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: "CI"
 on:
   push:
     branches:
-      - '*'
+      - "*"
 jobs:
   tests:
     strategy:
@@ -11,15 +11,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+
+      - uses: cachix/install-nix-action@v20
+        name: Install Nix
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
       - uses: cachix/cachix-action@v12
         with:
-          name: srid
-      - name: Build examples
-        id: examples
-        run: |
-          # Github Action runners do not support M1 yet.
-          nix run nixpkgs#sd mkARMMacosSystem mkIntelMacosSystem ./examples/*/flake.nix
+          name: mycache
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
+      - name: Run CI
+        run: |
           nix run github:srid/nixci
