--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: cachix/cachix-action@v12
         with:
-          name: mycache
+          name: elara
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
 
       - name: Run CI
