--- a/package.yaml
+++ b/package.yaml
@@ -82,10 +82,8 @@ library:
   source-dirs: src
   build-tools:
     - alex
-  dependencies:
-    - polysemy-plugin
-  ghc-options:
-    - -fplugin=Polysemy.Plugin
+  # ghc-options:
+  #   - -fplugin=Polysemy.Plugin
 
 executables:
   elara:
