--- a/elara.cabal
+++ b/elara.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.35.2.
 --
@@ -106,6 +106,8 @@ library
       TODO
   other-modules:
       Paths_elara
+  autogen-modules:
+      Paths_elara
   hs-source-dirs:
       src
   default-extensions:
@@ -119,13 +121,13 @@ library
       DeriveFunctor
       TypeApplications
       PartialTypeSignatures
-  ghc-options: -Wall -W -Wcompat -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Widentities -optP-Wno-nonportable-include-path -feager-blackholing -fdefer-typed-holes -fno-show-valid-hole-fits -j4 +RTS -A32m -RTS -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
+  ghc-options: -Wall -fplugin=Polysemy.Plugin
   build-tools:
       alex
   build-depends:
       aeson
     , array
-    , base-noprelude
+    , base
     , binary
     , bytestring
     , containers
@@ -148,11 +150,15 @@ library
     , safe-exceptions
     , terminal-size
     , utf8-string
+  mixins:
+      base hiding (Prelude)
   default-language: GHC2021
 
 executable elara
   main-is: Main.hs
   other-modules:
+      Paths_elara
+  autogen-modules:
       Paths_elara
   hs-source-dirs:
       app
@@ -167,11 +173,11 @@ executable elara
       DeriveFunctor
       TypeApplications
       PartialTypeSignatures
-  ghc-options: -Wall -W -Wcompat -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Widentities -optP-Wno-nonportable-include-path -feager-blackholing -fdefer-typed-holes -fno-show-valid-hole-fits -j4 +RTS -A32m -RTS -flate-specialise -fspecialise-aggressively -threaded
+  ghc-options: -Wall -fplugin=Polysemy.Plugin -threaded
   build-depends:
       aeson
     , array
-    , base-noprelude
+    , base
     , binary
     , bytestring
     , containers
@@ -195,125 +201,6 @@ executable elara
     , safe-exceptions
     , terminal-size
     , utf8-string
+  mixins:
+      base hiding (Prelude)
   default-language: GHC2021
-
-test-suite doctest
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
-  other-modules:
-      Paths_elara
-  hs-source-dirs:
-      doctest
-  default-extensions:
-      OverloadedStrings
-      OverloadedRecordDot
-      TypeFamilies
-      LambdaCase
-      ImportQualifiedPost
-      DeriveDataTypeable
-      DataKinds
-      DeriveFunctor
-      TypeApplications
-      PartialTypeSignatures
-  ghc-options: -Wall -W -Wcompat -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Widentities -optP-Wno-nonportable-include-path -feager-blackholing -fdefer-typed-holes -fno-show-valid-hole-fits -j4 +RTS -A32m -RTS -flate-specialise -fspecialise-aggressively -threaded -O0
-  build-depends:
-      Glob
-    , aeson
-    , array
-    , base-noprelude
-    , binary
-    , bytestring
-    , containers
-    , diagnose
-    , directory
-    , doctest-parallel
-    , elara
-    , filepath
-    , generic-lens
-    , h2jvm
-    , headed-megaparsec
-    , lens
-    , megaparsec
-    , mtl
-    , parser-combinators
-    , polysemy
-    , polysemy-plugin
-    , pretty-simple
-    , prettyprinter
-    , prettyprinter-ansi-terminal
-    , relude
-    , safe-exceptions
-    , terminal-size
-    , utf8-string
-  default-language: GHC2021
-
-test-suite elara-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Arbitrary.AST
-      Arbitrary.Literals
-      Arbitrary.Names
-      Common
-      Infer
-      Infer.Common
-      Lex
-      Lex.Common
-      Lex.Indents
-      Orphans
-      Parse
-      Parse.Common
-      Parse.Patterns
-      Shunt
-      Paths_elara
-  hs-source-dirs:
-      test
-  default-extensions:
-      OverloadedStrings
-      OverloadedRecordDot
-      TypeFamilies
-      LambdaCase
-      ImportQualifiedPost
-      DeriveDataTypeable
-      DataKinds
-      DeriveFunctor
-      TypeApplications
-      PartialTypeSignatures
-      QuasiQuotes
-  ghc-options: -Wall -W -Wcompat -Werror=incomplete-uni-patterns -Wredundant-constraints -Wunused-imports -Wunused-foralls -Wmissing-fields -Winaccessible-code -Wincomplete-record-updates -Wpartial-fields -Widentities -optP-Wno-nonportable-include-path -feager-blackholing -fdefer-typed-holes -fno-show-valid-hole-fits -j4 +RTS -A32m -RTS -flate-specialise -fspecialise-aggressively -threaded -O0
-  build-depends:
-      HUnit
-    , QuickCheck
-    , aeson
-    , array
-    , base-noprelude
-    , binary
-    , bytestring
-    , containers
-    , diagnose
-    , directory
-    , elara
-    , filepath
-    , generic-lens
-    , h2jvm
-    , headed-megaparsec
-    , hedgehog
-    , hspec ==2.*
-    , hspec-hedgehog
-    , hspec-megaparsec
-    , lens
-    , megaparsec
-    , mtl
-    , neat-interpolation
-    , parser-combinators
-    , polysemy
-    , polysemy-plugin
-    , pretty-simple
-    , prettyprinter
-    , prettyprinter-ansi-terminal
-    , relude
-    , safe-exceptions
-    , terminal-size
-    , utf8-string
-  default-language: GHC2021
-  build-tool-depends: hspec-discover:hspec-discover == 2.*
